--- a/assets/gui/area-box.glade
+++ b/assets/gui/area-box.glade
@@ -19,6 +19,10 @@
           <object class="GtkLabel">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="margin_left">6</property>
+            <property name="margin_right">6</property>
+            <property name="margin_top">6</property>
+            <property name="margin_bottom">6</property>
             <property name="label" translatable="yes">Opacity</property>
           </object>
           <packing>
@@ -31,6 +35,10 @@
           <object class="GtkScale" id="area_opacity_scale">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="margin_left">6</property>
+            <property name="margin_right">6</property>
+            <property name="margin_top">6</property>
+            <property name="margin_bottom">6</property>
             <property name="adjustment">adjustment_opacity</property>
             <property name="fill_level">1</property>
             <property name="round_digits">1</property>
@@ -56,6 +64,10 @@
           <object class="GtkLabel">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="margin_left">6</property>
+            <property name="margin_right">6</property>
+            <property name="margin_top">6</property>
+            <property name="margin_bottom">6</property>
             <property name="label" translatable="yes">Color</property>
           </object>
           <packing>
@@ -69,6 +81,10 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
+            <property name="margin_left">6</property>
+            <property name="margin_right">6</property>
+            <property name="margin_top">6</property>
+            <property name="margin_bottom">6</property>
           </object>
           <packing>
             <property name="expand">False</property>
